# citeworks

./: CITATION.cff  Cargo.toml  README.md  bors.toml  release.toml
.github/workflows/: check.yml  main.yml  merge.yml
crates/cff/: Cargo.toml  release.toml
crates/cff/src/: cff.rs  date.rs  identifiers.rs  lib.rs  license.rs  names.rs  references.rs
crates/cff/tests/: pass.rs  write.rs
crates/cff/tests/pass/: README.md  closed-source.cff  mardyn.cff
crates/cli/: Cargo.toml  release.toml
crates/csl/: Cargo.toml  release.toml
crates/csl/src/: dates.rs  items.rs  lib.rs  names.rs  ordinaries.rs
crates/csl/tests/: parse.rs  write.rs  zotero.rs
crates/csl/tests/csl-json/: author2.json  complex-date.json  date-range.json  edtf.json  extra.json  our-own-refs.json  raw-date.json  single-date.json  zotero-export.json
