[package]
name = "citeworks-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive", "cargo"] }
citeworks-cff = { version = "0.1.0", path = "../cff" }
citeworks-csl = { version = "0.1.0", path = "../csl" }
miette = { version = "5.3.0", features = ["fancy"] }
serde_yaml = "0.9.6"
url = "2.2.2"
