[package]
name = "citeworks-cli"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "csl2cff tool to write a CSL-JSON bibliography to a CFF file"
keywords = ["cff", "csl", "convert", "citeworks"]

repository = "https://github.com/passcod/citeworks"

rust-version = "1.59.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive", "cargo"] }
citeworks-cff = { version = "0.1.0", path = "../cff" }
citeworks-csl = { version = "0.3.0", path = "../csl" }
miette = { version = "5.3.0", features = ["fancy"] }
serde_yaml = "0.9.6"
url = "2.2.2"
