[package]
name = "citeworks-csl"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Serde types for serialising and deserialising CSL-JSON"
keywords = ["csl", "csl-json", "citation-style", "citeworks"]

documentation = "https://docs.rs/citeworks-csl"
repository = "https://github.com/passcod/citeworks"
readme = "../../README.md"

rust-version = "1.63.0"
edition = "2021"

[dependencies]
decorum = { version = "0.3.1", default-features = false }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[dev-dependencies]
pretty_assertions = "1.2.1"
